# brown-forecasting.github.io

./: .pdm-python  CLAUDE.md  build.py  index.html  notes  pyproject.toml  ssg.py
docs/: CNAME  about.html  index.html  people.html  schedule.html  tournament.html
templates/: about.html  base.html  index.html  people.html  schedule.html  tournament.html
